--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "dev": "npm-run-all --parallel webpack-dev start-dev",
     "start-dev": "babel-watch dist/app.js"
   },
-  "keywords": ["Disney","Node","Express","API"],
+  "keywords": [
+    "Disney",
+    "Node",
+    "Express",
+    "API"
+  ],
   "author": "Hansee Jimenez",
   "license": "ISC",
   "devDependencies": {
@@ -41,7 +46,9 @@
   "dependencies": {
     "@prisma/client": "^4.2.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
